//run "protoc -I . dcache.proto --go_out=plugins=grpc:."
syntax = "proto3";

package dcache;

message GetRequest {
    string group = 1;
    string key = 2; // not actually required/guaranteed to be UTF-8    
}

message GetResponse {
    bool status = 1;
    bytes value = 2;
    double minute_qps = 3;    
}

message SetRequest {
    string group = 1;
    string key = 2; // not actually required/guaranteed to be UTF-8
    bytes value = 3; // not actually required/guaranteed to be UTF-8
}

message SetResponse {
    bool status = 1;
    double minute_qps = 2;
}

message DelRequest {
    string group = 1;
    string key = 2; // not actually required/guaranteed to be UTF-8        
}

message DelResponse {
    bool status = 1;
    bytes value = 2;
    double minute_qps = 3;    
}

service GroupCache {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Del(DelRequest) returns (DelResponse) {}
}